rework the flow of submitting a message to facebook.  Also added layout info

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
   <%= csrf_meta_tag %>
 </head>
 <body>
+  <div id="header">
+    <img alt="Powered by Mango" class="powered-by-mango png_img" src="/images/powered-by-mango.png?1285351421">
+  </div
 
 <%= yield %>
 
