ugly twitter auth working

--- a/app/views/punchbowl/index.haml
+++ b/app/views/punchbowl/index.haml
@@ -1,7 +1,7 @@
 #wrap 
   #main.png_img
     .content
-      - semantic_form_for @post, :url => 'facebook/auth' do |form|
+      - semantic_form_for @post, :url => 'twitter/auth' do |form|
         = form.input :message, :as => :text, :label => false, :input_html => { :value => "Try Mango..." }
         = form.commit_button :button_html => { :value => "Share" } 
       = image_tag 'facebook.png'
