--- a/app/views/punchbowl/index.haml
+++ b/app/views/punchbowl/index.haml
@@ -1,7 +1,7 @@
 #wrap 
   #main.png_img
     .content
-      - semantic_form_for @post, :url => 'facebook/auth' do |form|
+      - semantic_form_for @post, :url => 'facebook/auth?post_to=facebook+twitter' do |form|
         = render :partial => 'message', :locals => {:form => form}
       = image_tag 'facebook.png'
     
