some more error handling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 <body>
   <div id="header">
     <img alt="Powered by Mango" class="powered-by-mango png_img" src="/images/powered-by-mango.png?1285351421">
+    <%= render '/layouts/header' %>
   </div>
 
 <%= yield %>
