--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Punchbowl</title>
   <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag  "jquery-1.4.2.min", "jquery.validate.min", "application" %>
   <%= csrf_meta_tag %>
 </head>
 <body>
