--- a/app/views/punchbowl/index.haml
+++ b/app/views/punchbowl/index.haml
@@ -1,7 +1,7 @@
 #wrap 
   #main.png_img
     .content
-      - semantic_form_for @post, :url => '/posts' do |form|
+      - semantic_form_for @post do |form|
         = render :partial => '/punchbowl/message', :locals => {:form => form}
 
 
