--- a/app/views/gift_of_mangos/new.haml
+++ b/app/views/gift_of_mangos/new.haml
@@ -2,7 +2,7 @@
   #main.png_img
     .content
       - semantic_form_for @post, :url => '/mango_tango' do |form|
-        = render :partial => '/gift_of_mangos/dance_card', :locals => {:form => form}
+        = render :partial => '/gift_of_mangos/message', :locals => {:form => form}
 
 
     
