fix gift of mango

--- a/app/views/gift_of_mangos/new.haml
+++ b/app/views/gift_of_mangos/new.haml
@@ -1,7 +1,7 @@
 #wrap 
   #main.png_img
     .content
-      - semantic_form_for @post, :url => '/mango_tango' do |form|
+      - semantic_form_for @post, :url => '/gift_of_mango' do |form|
         = render :partial => '/gift_of_mangos/message', :locals => {:form => form}
 
 
