--- a/app/views/mango_tangos/_dance_card.haml
+++ b/app/views/mango_tangos/_dance_card.haml
@@ -1,4 +1,4 @@
-= form.inputs :email, :for => :customer
-- 3.times do |i|
+= render :partial => 'customer'
+- 10.times do |i|
   = render :partial => 'dance_partner', :locals => {:index => i} 
 = form.commit_button :button_html => { :value => "Submit Dance Card" } 
