--- a/app/views/layouts/gift_of_mango.html.haml
+++ b/app/views/layouts/gift_of_mango.html.haml
@@ -2,7 +2,7 @@
 %html
 %head
   %title Punchbowl
-  = stylesheet_link_tag "punchbowl", "mango_tango", "formtastic", "formtastic_changes" 
+  = stylesheet_link_tag "punchbowl", "gift_of_mango", "formtastic", "formtastic_changes"
   = javascript_include_tag  "jquery-1.4.2.min", "jquery.validate.min", "application" 
   = csrf_meta_tag 
 %body
