--- a/app/views/mango_tangos/_dance_partner.erb
+++ b/app/views/mango_tangos/_dance_partner.erb
@@ -1,11 +1,8 @@
 <fieldset class="inputs">
-  <legend>
-    <span>Dance Partner <%= index %></span>
-  </legend>
   <ol>
     <li class="string required" id="mango_tango_dance_partners_<%= index %>_email_input">
-      <label for="mango_tango_dance_partners_<%= index %>_email">Email<abbr title="required">*</abbr></label>
-      <input id="mango_tango_dance_partners_<%= index %>_email" name="mango_tango[dance_partners][<%= index %>][email]" size="50" type="text">
+      <label for="mango_tango_dance_partners_<%= index %>_email"><%= index.next %>) Dance Partner</label>
+      <input id="mango_tango_dance_partners_<%= index %>_email" name="mango_tango[dance_partners][<%= index %>][email]" size="30" type="text" placeholder="Email">
       </li>
   </ol>
 </fieldset>
