added tango image

--- a/app/views/mango_tangos/new.haml
+++ b/app/views/mango_tangos/new.haml
@@ -6,4 +6,5 @@
   .mango_tango
     - semantic_form_for @tango, :url => mango_tango_path(@tango) do |form|
       = render :partial => '/mango_tangos/dance_card', :locals => {:form => form}
+  = image_tag 'tango.png', :id => "tango"
 
