--- a/public/stylesheets/mango_tango.scss
+++ b/public/stylesheets/mango_tango.scss
@@ -5,6 +5,12 @@
       width: 80%;
       background-color: #A47858;
     }
+    #tango{
+      z-index: 3;
+      position: relative;
+      bottom: 220px;
+      left: 550px;
+    }
 
   }
     
