--- a/public/stylesheets/mango_tango.css
+++ b/public/stylesheets/mango_tango.css
@@ -2,3 +2,8 @@
   border: 0;
   width: 80%;
   background-color: #A47858; }
+#main .content #tango {
+  z-index: 3;
+  position: relative;
+  bottom: 220px;
+  left: 550px; }
