gift_of_mango now has a pointer

--- a/app/views/layouts/gift_of_mango.html.haml
+++ b/app/views/layouts/gift_of_mango.html.haml
@@ -2,7 +2,7 @@
 %html
 %head
   %title Punchbowl
-  = stylesheet_link_tag "pb2", "punchbowl", "mango_tango", "formtastic", "formtastic_changes", "colorbox"
+  = stylesheet_link_tag "pb2", "punchbowl", "gift_of_mango", "formtastic", "formtastic_changes", "colorbox"
   = javascript_include_tag  "jquery-1.4.2.min", "jquery.validate.min", "jquery.colorbox.min", "application"
   = csrf_meta_tag 
 %body
