--- a/app/views/badges/index.haml
+++ b/app/views/badges/index.haml
@@ -6,4 +6,4 @@
       %div{:id => b.name + "_blurb"}
         %h3="Learn more about the #{b.name} accomplishment badge"
         = image_tag(b.image_path, :name => b.name, :alt => b.name)
-        = link_to "Test Post this Badge", "#", :class => 'test_post', :rel => b.name 
+        = link_to "Test Post this Badge", "/accomplishments?language=#{b.language.name}&uuid=1", :class => 'test_post', :rel => b.name 
