--- a/app/views/accomplishments/new.html.erb
+++ b/app/views/accomplishments/new.html.erb
@@ -1,2 +1,60 @@
-<h1>Accomplishments#new</h1>
-<p>Find me in app/views/accomplishments/new.html.erb</p>
+
+
+<script>
+  $(function(){
+    $('.test_link#1').click(function(){
+      $('#overlay').punchbowl('post', { uuid : '1', badge_name : 'English', message : 'Completed lesson in English', language : 'English' });
+    });
+  });
+  $(function(){
+    $('.test_link#2').click(function(){
+      $('#overlay').punchbowl('post', { uuid : null, badge_name : 'English', message : 'Completed lesson in English', language : 'English' });
+    });
+  });
+  $(function(){
+    $('.test_link#3').click(function(){
+      $('#overlay').punchbowl('post', { uuid : 'unknown', badge_name : 'English', message : 'Completed lesson in English', language : 'English' });
+    });
+  });
+  $(function(){
+    $('.test_link#4').click(function(){
+      $('#overlay').punchbowl('post', { uuid : 'no_sharing', badge_name : 'English', message : 'Completed lesson in English', language : 'English' });
+    });
+  });
+  $(function(){
+    $('.test_link#5').click(function(){
+      $('#overlay').punchbowl('post', { uuid : 'ask_first', badge_name : 'English', message : 'Completed lesson in English', language : 'English' });
+    });
+  });
+  $(function(){
+    $('.test_link#6').click(function(){
+      $('#overlay').punchbowl('post', { uuid : 'red_lit', badge_name : 'English', message : 'Completed lesson in English', language : 'English' });
+    });
+  });
+</script>
+
+
+<div class ='content'>
+  <ul>
+    <li>
+    <%= link_to "Test Known user with Customer record, wants to share, doesnt want to be asked and is green lit for facebook", "#", :class => "test_link", :id => "1" %>
+    </li>
+    <li>
+    <%= link_to "Test anonymour user", "#", :class => "test_link", :id => "2" %>
+    </li>
+    <li>
+    <%= link_to "Test Known user with no currend customer record", "#", :class => "test_link", :id => "3"%>
+    </li>
+    <li>
+    <%= link_to "Test Known user with Customer record but does not want to share", "#", :class => "test_link", :id => "4" %>
+    </li>
+    <li>
+    <%= link_to "Test Known user with Customer record, wants to share, but wants to be asked ", "#", :class => "test_link", :id => "5" %>
+    </li>
+    <li>
+    <%= link_to "Test Known user with Customer record, wants to share, doesnt want to be asked and is red lit for facebook", "#", :class => "test_link", :id => "6" %>
+    </li>
+  </ul>
+  <div id='overlay' style="display: none; "></div>
+</div>
+
