--- a/app/views/layouts/message.html.haml
+++ b/app/views/layouts/message.html.haml
@@ -2,8 +2,11 @@
 %html
 %head
   %title Punchbowl
-  = stylesheet_link_tag "post", "formtastic", "formtastic_changes"
+  = stylesheet_link_tag "pb2", "punchbowl", "post", "formtastic", "formtastic_changes"
   = javascript_include_tag  "jquery-1.4.2.min", "jquery.validate.min", "application", "post"
   = csrf_meta_tag 
 %body
-  = yield 
+  #main.png_img
+    = image_tag "/images/content-center.jpg", :class=>"content-img-middle"
+    = image_tag "/images/content-top-no-menu.jpg",  :class=>"content-img-top"
+    = yield 
