--- a/app/views/tango_mailer/invitation.html.erb
+++ b/app/views/tango_mailer/invitation.html.erb
@@ -4,7 +4,20 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <h1>You are invited to Tango with Mango</h1>
+    <p>Hey there <%= @partner.name %>!</p>
+
+    <p>
+    Your friend <%= @customer.name %> told us you might be interested in learning a foreign language, 
+    and we want to help! Mango is the fun, easy and effective way to gain practical conversation skills  for 
+    the world’s most popular languages. It’s a great way for travelers of all kinds to learn the basics of a 
+    foreign language and culture.</p>
+
+    <p>Get started now, and we’ll give you 10% off! Just enter CODE as the discount code at checkout.</p>
+
+    <p>Happy travels!</p>
+
+    <p>Mango Languages</p>
+    
   </body>
 </html>
 
