--- a/public/stylesheets/post.scss
+++ b/public/stylesheets/post.scss
@@ -1,5 +1,8 @@
+#main {
+  margin: 0px;
+ }
+
 #post_message_form{
   width: 799px;
   height: 511px;
-  background: url(/images/postcard.png) top left no-repeat; 
 }
