--- a/app/views/gift_of_mangos/new.haml
+++ b/app/views/gift_of_mangos/new.haml
@@ -2,8 +2,10 @@
   %h1 You have given the Gift of Mango
   %h2 Now share with the world!
 
-.content    
-  = image_tag "envelope.png", :id => "envelope"
+.content 
+  #post_message_box
+    %h3 You gave the Gift of Mango, now share with the world!
+    = render :partial => '/shared/message', :locals => {:url => @post.create_url, :email => @email, :source => "gift_of_mango"}
 
     
 
