--- a/app/views/layouts/gift_of_mango.html.haml
+++ b/app/views/layouts/gift_of_mango.html.haml
@@ -2,8 +2,8 @@
 %html
 %head
   %title Punchbowl
-  = stylesheet_link_tag "pb2", "punchbowl", "gift_of_mango", "formtastic", "formtastic_changes", "colorbox"
-  = javascript_include_tag  "jquery-1.4.2.min", "jquery.validate.min", "jquery.colorbox.min", "application", "gift"
+  = stylesheet_link_tag "pb2", "punchbowl", "formtastic", "formtastic_changes", "colorbox", "gift_of_mango"
+  = javascript_include_tag  "jquery-1.4.2.min", "jquery.validate.min", "jquery.colorbox.min", "application", "gift", "post"
   = csrf_meta_tag 
 %body
   #wrap
