--- a/app/views/mango_tangos/_customer.erb
+++ b/app/views/mango_tangos/_customer.erb
@@ -2,7 +2,8 @@
   <ol>
     <li class="string required" id="mango_tango_customer_email_input">
       <label for="mango_tango_customer_email">You</label>
-      <input id="mango_tango_customer_email" name="mango_tango[customer][email]" size="30" type="text" placeholder="Email">
+      <input id="mango_tango_customer_name" class="mango_tango_name_input required" name="mango_tango[customer][name]" size="15" type="text" placeholder="First Name">
+      <input id="mango_tango_customer_email" class= "required email" name="mango_tango[customer][email]" size="30" type="text" placeholder="Email">
     </li>
   </ol>
 </fieldset>
