--- a/public/stylesheets/mango_tango.scss
+++ b/public/stylesheets/mango_tango.scss
@@ -1,17 +1,21 @@
 #main {
   .content {
+    height: 602px;
     hr {
       border: 0;
       width: 80%;
       background-color: #A47858;
     }
     #tango{
-      z-index: 3;
+      z-index: -11;
       position: relative;
-      bottom: 220px;
+      bottom: 110px;
       left: 550px;
+      opacity: 0.2;
     }
-
+  }
+  .mango_tango_name_input {
+    width: 150px;
   }
     
 }
