--- a/public/stylesheets/post.css
+++ b/public/stylesheets/post.css
@@ -1,4 +1,6 @@
+#main {
+  margin: 0px; }
+
 #post_message_form {
   width: 799px;
-  height: 511px;
-  background: url(/images/postcard.png) top left no-repeat; }
+  height: 511px; }
