--- a/app/views/posts/success.haml
+++ b/app/views/posts/success.haml
@@ -3,6 +3,7 @@
   $.colorbox({innerWidth:"799", innerHeight:"575", scrolling:false, inline:true, href:"#success_copy"});
   });
 
-.hidden
-  #success_copy
-    %h3 Congratulations, you shared with the world!
+.content
+  .hidden
+    #success_copy
+      %h3 Congratulations, you shared with the world!
