--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,8 +2,8 @@
 %html
 %head
   %title Punchbowl
-  = stylesheet_link_tag "p2b", "formtastic", "formtastic_changes"
-  = javascript_include_tag  "jquery-1.4.2.min", "jquery.validate.min", "jquery.colorbox.min", "application", "jquery.punchbowl"
+  = stylesheet_link_tag "formtastic", "formtastic_changes"
+  = javascript_include_tag  "jquery-1.4.2.min",  "application", "jquery.punchbowl"
   = csrf_meta_tag 
 %body
   #wrap
