--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
 %head
   %title Punchbowl
   = stylesheet_link_tag "formtastic", "formtastic_changes"
-  = javascript_include_tag  "jquery-1.4.2.min",  "application", "jquery.punchbowl"
+  = javascript_include_tag  "jquery-1.4.2.min",  "application", "jquery.punchbowl", "post"
   = csrf_meta_tag 
 %body
   #wrap
