[#28604703] Upgrade to FactoryGirl
Upgraded FactoryGirl and changed specs to use the new syntax returning
to green.

Changed the style of the TwitterAccount spec to use subject() as an
example of how a spec could be written without instance variables. Only
changed this one small spec to not get ahead of myself, as the others
work just fine.

Using Randome.rand() in the Customer FactoryGirl definition for 1.9.x

Removed references to Machinist and it's blueprint.rb

Added the formtastic form.action wrapping the submit buttons.

Added guard and a Guardfile if one is inclined to use it.

--- a/app/views/posts/new.haml
+++ b/app/views/posts/new.haml
@@ -7,8 +7,9 @@
     = form.input :twitter_user
     = form.input :test_account
     .submit_button
-      = form.commit_button :button_html => { :value => "Create User" } 
-
+      =# form.commit_button :button_html => { :value => "Create User" }
+      = form.actions do
+        = form.action :submit, :button_html => { :value => "Create User" }
 %h3 Test Messages
 #post_message_form
   = semantic_form_for @post, :url => '/posts.json' do |form|
@@ -18,8 +19,9 @@
       %label{:for => :uuid} UUID
       %input{:id => :UUID, :name=>"uuid", :placeholder=>"Your uuid here...", :size=>"40", :type=>"text"}
     .submit_button
-      = form.commit_button :button_html => { :value => "Deliver Message" } 
-
+      =# form.commit_button :button_html => { :value => "Deliver Message" }
+      = form.actions do
+        = form.action :submit, :button_html => { :value => "Deliver Message" }
 
 
 
