API updates to add add_network, remove_network, reauthorize, and posting to specific network

--- a/app/views/posts/new.haml
+++ b/app/views/posts/new.haml
@@ -18,6 +18,9 @@
     #address_area
       %label{:for => :uuid} UUID
       %input{:id => :UUID, :name=>"uuid", :placeholder=>"Your uuid here...", :size=>"40", :type=>"text"}
+    #network
+      = form.input :posted_to_facebook
+      = form.input :posted_to_twitter
     .submit_button
       =# form.commit_button :button_html => { :value => "Deliver Message" }
       = form.actions do
