add anonymous boolean to customer

--- a/app/views/posts/new.haml
+++ b/app/views/posts/new.haml
@@ -5,7 +5,7 @@
     = form.input :uuid, :input_html => {  :placeholder => "UUID here...", }
     = form.input :facebook_user
     = form.input :twitter_user
-    = form.input :test_account
+    = form.input :anonymous
     .submit_button
       =# form.commit_button :button_html => { :value => "Create User" }
       = form.actions do
