accept image urls and src strings for posts

--- a/app/views/posts/new.haml
+++ b/app/views/posts/new.haml
@@ -21,6 +21,8 @@
     #network
       = form.input :posted_to_facebook
       = form.input :posted_to_twitter
+      = form.input :image_src
+      = form.input :image_url
     .submit_button
       =# form.commit_button :button_html => { :value => "Deliver Message" }
       = form.actions do
